quick style fix `<sup>` tag changed the vertical spacing and on small screens exposes the header background. Added empty `<sup>` tag to the other menu items as a patch.

--- a/assets/stylus/components/header.styl
+++ b/assets/stylus/components/header.styl
@@ -9,9 +9,10 @@
 	position relative
 	padding 0.75em 0 0
 
-	@media all and (min-width: 48em)
+	@media $break-lg
 		padding 1.25em 1.5em
-
+		
+		
 	@extend .clearfix
 	
 .Header-logo
